fixed spacing issues

--- a/src/App.scss
+++ b/src/App.scss
@@ -268,6 +268,10 @@
             .img-container {
                 margin-top: 84px;
 
+                @include media-breakpoint-down(md) {
+                    margin-top: 50px;
+                }
+
                 .img-dreamer-text {
                     font-size: 21px;
                     font-weight: $font400;
@@ -413,6 +417,7 @@
 
                 @include media-breakpoint-down(md) {
                     max-width: 100%;
+                    padding: 65px 30px 70px 30px;
                 }
 
                 .dream-machine-img {
